# GoDaddyDDNS

./: .pre-commit-config.yaml  README.md  godaddy.py  ipify.py  pyproject.toml  timestamp.py  updater.py  utils.py
godaddyddns/: godaddy.py  ipify.py  utils.py
