[tool.poetry]
name = "godaddyddns"
version = "0.1.0"
description = "Update a GoDaddy DNS A Record to point to your current machine's IP (obtained from ipify)"
authors = ["Unlimited Ltd <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.2"
requests = "^2.31.0"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
